top url https add

--- a/app/design/frontend/codazon_fastest/default/template/page/html/codazon_header/header_style_01.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/html/codazon_header/header_style_01.phtml
@@ -37,7 +37,7 @@
 						<?php echo $this->getChildHtml('store_switcher_style_01') ?>
 						<?php echo $this->getChildHtml('store_language_style_01') ?>
 						<?php echo $this->getChildHtml('currency_style_01') ?>
-						<p style="font-family: 'Open Sans', Sans-serif;font-weight: 500;padding-left: 45px;background: url(http://www.spreeos.com/banners-custom/mobile-icon.png) 5px 2px no-repeat;"><a href="https://www.spreeos.com/contacts/">CONTACT US</a></p>
+						<p style="font-family: 'Open Sans', Sans-serif;font-weight: 500;padding-left: 45px;background: url(https://www.spreeos.com/banners-custom/mobile-icon.png) 5px 2px no-repeat;"><a href="https://www.spreeos.com/contacts/">CONTACT US</a></p>
 						
 					</div>
 					<div class="col-sm-12 cdz-col-right" id="cdz-pc-account">
