my dasbord section extra link

--- a/app/design/frontend/codazon_fastest/default/layout/newsletter.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/newsletter.xml
@@ -49,7 +49,10 @@ Customer account pages, rendered for all tabs in dashboard
         <!-- Mage_Newsletter -->
         <reference name="customer_account_navigation">
             <action method="addLink" translate="label" module="newsletter"><name>newsletter</name><path>newsletter/manage/</path><label>Newsletter Subscriptions</label></action>
+			<action method="addLink" translate="label" module="customer">
+			<name>Return Form</name><path>sales/guest/form</path><label>Return Form</label></action>
         </reference>
+		
         <remove name="left.newsletter"/>
     </customer_account>
 
