--- a/app/design/frontend/codazon_fastest/default/template/sales/order/history.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/sales/order/history.phtml
@@ -72,9 +72,9 @@
                      <?php endif?>
 
 
-                     <?php if ($this->helper('sales/reorder')->canReorder($_order)) : ?>
+                    <?php /* <?php if ($this->helper('sales/reorder')->canReorder($_order)) : ?>
                     <span class="separator">|</span> <a href="<?php echo $this->getReorderUrl($_order) ?>" class="link-reorder"><?php echo $this->__('Reorder') ?></a>
-                <?php endif ?>
+                <?php endif ?> */?>
 
                 </span>
             </td>
