--- a/app/design/frontend/codazon_fastest/default/template/page/html/codazon_header/header_style_01.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/html/codazon_header/header_style_01.phtml
@@ -41,7 +41,7 @@
 						
 					</div>
 					<div class="col-sm-12 cdz-col-right" id="cdz-pc-account">
-						<?php echo $this->getChildHtml('topLinks') ?>
+						<?php // echo $this->getChildHtml('topLinks') ?>
 						<?php echo $this->getChildHtml('cdzTopLinks') ?>
 					</div>
 				</div>
