--- a/app/design/frontend/codazon_fastest/default/template/sales/order/history.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/sales/order/history.phtml
@@ -67,7 +67,8 @@
                     <?php /*<span class="separator">|</span><a href="<?php echo $this->getTrackUrl($_order) ?>"><?php echo $this->__('Track Order') ?></a>&nbsp;*/ ?>
                     <?php if ($this->helper('sales/reorder')->canReorder($_order)) : ?>
                     <?php endif ?>
-                    <?php if (($date_time_stamp-$created_at)>=86400 && $_order->getData('status')!='canceled' ) : ?>
+					<span class="separator">|</span>
+                    <?php if (($date_time_stamp-$created_at)<=86400 && $_order->getData('status')!='canceled' ) : ?>
                     <a href="<?php echo $this->getUrl('customerordercancel/order/cancel', array('order_id' => $_order->getId(), '_secure'=>true)) ?>" class="link-reorder"><?php echo $this->__('Cancel Order') ?></a>
                      <?php endif?>
 
