--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26600,8 +26600,10 @@ form .legend {
 	.v-grid { float:inherit; display:block; width:100%; }
 }
 
-
-
+/* align logo in center on popup */
+.banner .img-responsive {
+    margin: 0 auto;
+}
 
 
 
