added css to align logo in center

--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26600,7 +26600,7 @@ form .legend {
 	.v-grid { float:inherit; display:block; width:100%; }
 }
 
-/* align logo in center on popup */
+/* align logo in center on popup  page*/
 .banner .img-responsive {
     margin: 0 auto;
 }
