--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -8,4 +8,4 @@ $categories = Mage::getModel('catalog/category')
 					<?php foreach($categories as $category){
 						
 						<?php echo $category->getName(); ?>
-					}?>
+					<?php }?>
