--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -15,10 +15,13 @@
                             <?php $_categoryChildModel = Mage::getModel('catalog/category')->load($_categoryChild->getId());?>
                             <?php $categoryGrandchildren=$_categoryChild->getChildren(); ?>
                             <li>
-                                <?php
-                                    $currentCategoryId===$_categoryChild->getId() ? $bold="style=\"font-weight:bold\"" : $bold='';
-                                    echo '&emsp;' . '<a href="' . $_categoryChildModel->getUrl() . '"' . $bold . '>' .  $_categoryChild->getName() . '(' . $_categoryChildModel->getProductCollection()->count() . ')</a>';
-                                ?>
+                          <?php
+                           $currentCategoryId===$_categoryChild->getId() ? $bold="style=\"font-weight:bold\"" : $bold='';
+                             echo  '<a href="' . $_categoryChildModel->getUrl() . '"' . $bold . '>' .  $_categoryChild->getName() .'</a>';
+                               
+                      echo Mage::getModel('catalog/category')->load($_categoryChild)->getThumbnail();
+
+							   ?>
                             </li>
                             <?php if($categoryGrandchildren->count()) : ?>
                                 <?php foreach($categoryGrandchildren as $_categoryGrandchild) : ?>
