--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -13,14 +13,14 @@
  
                         <?php foreach($categoryChildren as $_categoryChild) : ?>
                             <?php $_categoryChildModel = Mage::getModel('catalog/category')->load($_categoryChild->getId());?>
-							<?php echo Mage::getModel('catalog/category')->load($_categoryChild->getId())->getThumbnail();?>
+							<img src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_categoryChild->getId())->getThumbnail();?>"/>
+							
                             <?php $categoryGrandchildren=$_categoryChild->getChildren(); ?>
                             <li>
                           <?php
-						  
-                           $currentCategoryId===$_categoryChild->getId() ? $bold="style=\"font-weight:bold\"" : $bold='';
+						  $currentCategoryId===$_categoryChild->getId() ? $bold="style=\"font-weight:bold\"" : $bold='';
                              echo  '<a href="' . $_categoryChildModel->getUrl() . '"' . $bold . '>' .  $_categoryChild->getName() .'</a>';
-                               echo  Mage::getModel('catalog/category')->load($_categoryChild->getId())->getThumbnail();?>
+                              ?>
                       
 
 							   
