--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -1,44 +1,63 @@
-<ul>
+<div class="cdz-main-menu cdz-main-menu-horizontal">
+<ul class="groupmenu">
+
     <?php
         $obj = new Mage_Catalog_Block_Navigation();
         $storeCategories = $obj->getStoreCategories();
         Mage::registry('current_category') ? $currentCategoryId = Mage::registry('current_category')->getId() : $currentCategoryId='';
         foreach ($storeCategories as $_category):
     ?>
-            <li>
-                <strong><?php echo $_category->getName(); ?></strong>
+           <li class="level0 level-top parent">
+		   <span class="cdz-menu-toggle">toggle</span>
+<a class="menu-link" href="<?php echo $_category->getUrl(); ?>"><span><?php echo $_category->getName(); ?></span></a>
+		   <div class="groupmenu-drop">
+<div class="groupmenu-drop-content groupmenu-6" style="padding-bottom: 60px;">
+<div class="row">
+                
                 <?php $categoryChildren = $_category->getChildren(); ?>
                 <?php if($categoryChildren->count()) : ?>
-                    <ul>
- 
+                    
+ <div class="col-sm-4">
                         <?php foreach($categoryChildren as $_categoryChild) : ?>
                             <?php $_categoryChildModel = Mage::getModel('catalog/category')->load($_categoryChild->getId());?>
-							<img src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_categoryChild->getId())->getThumbnail();?>"/>
+							<div class="groupdrop-banner space-s">
+							<img class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_categoryChild->getId())->getThumbnail();?>"/>
+							</div>
+							
 							
                             <?php $categoryGrandchildren=$_categoryChild->getChildren(); ?>
-                            <li>
+                           
                           <?php
-						  $currentCategoryId===$_categoryChild->getId() ? $bold="style=\"font-weight:bold\"" : $bold='';
-                             echo  '<a href="' . $_categoryChildModel->getUrl() . '"' . $bold . '>' .  $_categoryChild->getName() .'</a>';
-                              ?>
+						  if($currentCategoryId===$_categoryChild->getId()){?>
+							  <p class="groupdrop-title">
+							  
+<a href="<?php echo $_categoryChildModel->getUrl() ?>">
+<?php echo $_categoryChild->getName() ?></a>
+</p>
+							  
+						  <?php }	?>				  
                       
 
 							   
-                            </li>
+                           <ul class="groupdrop-link">
                             <?php if($categoryGrandchildren->count()) : ?>
                                 <?php foreach($categoryGrandchildren as $_categoryGrandchild) : ?>
                                     <?php $_categoryGrandchildModel = Mage::getModel('catalog/category')->load($_categoryGrandchild->getId());?>
-                                    <li>
+                                   
                                         <?php
-                                            $currentCategoryId===$_categoryChild->getId() ? $bold="style=\"font-weight:bold\"" : $bold='';
-                                            echo '&emsp;&emsp;' . '<a href="' . $_categoryGrandchildModel->getUrl() . '"' . $bold . '>' .  $_categoryGrandchild->getName() . '(' . $_categoryGrandchildModel->getProductCount() . ')</a>';
+                                            $currentCategoryId===$_categoryChild->getId() ;
+                                            echo '&emsp;&emsp;' . '<a href="' . $_categoryGrandchildModel->getUrl() . '"' . $bold . '>' .  $_categoryGrandchild->getName().'</a>';
                                         ?>
-                                    </li>
+                                   
                                 <?php endforeach; ?>
                             <?php endif; ?>
                         <?php endforeach; ?>
-                    </ul>
+                   
                 <?php endif; ?>
-            </li>
+           
         <?php endforeach ?>
+		</div><!--row div-->
+</div>
+</div> 
 </ul>
+</div>
