--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -76,30 +76,13 @@
                     <ul>
                         <?php foreach($_subcategories as $_subcategory): ?>
                             <li>
-                                <a href="<?php echo $_helper->getCategoryUrl($_subcategory) ?>">
-                                    <?php echo $_subcategory->getName() ?>
+                          <a href="<?php echo $_helper->getCategoryUrl($_subcategory) ?>">
+                         <?php echo $_subcategory->getName().$_subcategory->getId(); ?>
                                 </a>
-								<?php $_subsubcategory = Mage::getModel('catalog/category')->load($_subcategory->getId()) ?>
-                <?php $_subsubcategory = $_category->getChildrenCategories() ?>
-				 <?php if (count($_subsubcategory) > 0): ?>
-				 <ul  class="levelthird">
-				 <?php foreach($_subsubcategory as $_subsubcategorychild): ?>
-                            <li>
-                                <a href="<?php echo $_helper->getCategoryUrl($_subsubcategorychild) ?>">
-                                    <?php echo $_subsubcategorychild->getName() ?>
-                                </a>
-								</li>
-								 <?php endforeach; ?>
-				 </ul>
-				 
-				 
-				 <?php endif;?>
+						 <?php $_subsubcategory = Mage::getModel('catalog/category')->load($_subcategory->getId()) ?>
 								
                             </li>
                         <?php endforeach; ?>
-						
-						
-						
                     </ul>
                 <?php endif; ?>
             </li>
