--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -80,7 +80,11 @@
                          <?php echo $_subcategory->getName().$_subcategory->getId(); ?>
                                 </a>
 						 <?php $_subsubcategory = Mage::getModel('catalog/category')->load($_subcategory->getId()) ?>
-								
+								<?php if (count($_subsubcategory) > 0): ?>
+								 <?php foreach($_subsubcategory as $_subcategory1): ?>
+								 <?php  echo '3rd level--'. $_subcategory1->getName(); ?>
+								<?php endforeach; ?>
+								<?php endif;?>
                             </li>
                         <?php endforeach; ?>
                     </ul>
