--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -79,10 +79,11 @@
                           <a href="<?php echo $_helper->getCategoryUrl($_subcategory) ?>">
                          <?php echo $_subcategory->getName().$_subcategory->getId(); ?>
                                 </a>
-						 <?php $_subsubcategory = Mage::getModel('catalog/category')->load($_subcategory->getId()) ?>
+						 <?php $_subsubcategory = Mage::getModel('catalog/category')->load($_subcategory->getId()); ?>
+						<?php echo (count($_subsubcategory) ) ?>
 								<?php if (count($_subsubcategory) > 0): ?>
 								 <?php foreach($_subsubcategory as $_subcategory1): ?>
-								 <?php  echo '3rd level--'. $_subcategory1->getName(); ?>
+								 <?php  // echo '3rd level--'. $_subcategory1->getName(); ?>
 								<?php endforeach; ?>
 								<?php endif;?>
                             </li>
