--- a/app/design/frontend/codazon_fastest/default/template/deal/deal.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/deal/deal.phtml
@@ -1,4 +1,3 @@
-<h4><?php echo $this->__('Module List') ?></h4>
             <?php
                 
                 /*
@@ -63,3 +62,15 @@
 				*/
 
             ?> 
+			
+			<?php 
+			$collection = Mage::getModel('deal/deal')->getCollection();
+             foreach ($collection as $item) {
+				 if($item->getStatus()=='1'){
+                    echo $item->getName();
+                }
+			 }
+
+			?>
+               
+			
